Theme Directory: Fix alignment of filter buttons for narrow viewports.
Props pranitdugad, devmuhib.
Fixes #7492.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@13702 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-themes/css/components/_main.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-themes/css/components/_main.scss
@@ -1638,7 +1638,7 @@ body:not(.home) {
 
 .wp-filter .button.clear-filters {
 	display: none;
-	margin: 0 0 0 10px;
+	margin-left: 10px;
 }
 
 .filtered-by {
